Add python utilities for benchmarking

--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,10 @@
 *.out
 *.app
 
+# Python Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
 # Local executables produced by make
 gss
